--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,16 +1,4 @@
 ---
-#- name: install required packages
-#  apt:
-#    name: "{{ packages }}"
-#    state: present
-#    dpkg_options: 'force-confnew,force-confdef'
-#    autoclean: yes
-#    autoremove: yes
-#    update_cache: yes
-#    cache_valid_time: 3600
-#  vars:
-#    packages:
-#    - oracle-java8-installer
 
 - name: Check if we are done
   stat:
@@ -31,10 +19,10 @@
       group: root
       state: directory
 
-  - name: get Keycloak distribution tarball
-    get_url:
-      url: "{{ keycloak_url }}"
-      dest: "{{ keycloak_dir }}"
+#  - name: get Keycloak distribution tarball
+#    get_url:
+#      url: "{{ keycloak_url }}"
+#      dest: "{{ keycloak_dir }}"
 
   - name: unpack keycloak
     unarchive:
