--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
-keycloak_version: 7.0.0
-keycloak_dir: /var/lib/keycloak
-keycloak_archive: keycloak-{{ keycloak_version }}.tar.gz
-keycloak_url: http://downloads.jboss.org/keycloak/{{ keycloak_version }}/{{keycloak_archive }}
+keycloak_version: 16.1.0
+keycloak_dir: /data/keycloak
+keycloak_archive: keycloak-{{ keycloak_version }}.zip
+keycloak_url: https://github.com/keycloak/keycloak/releases/download/{{ keycloak_version }}/{{keycloak_archive }}
 keycloak_jboss_home: "{{ keycloak_dir }}/keycloak-{{ keycloak_version }}"
 keycloak_log_dir: "{{ keycloak_jboss_home }}/standalone/log"
 keycloak_bind_port: "8080"
@@ -10,13 +10,4 @@ keycloak_bind_address: "0.0.0.0"
 keycloak_admin_username: "admin"
 keycloak_admin_password: "admin"
 keycloak_create_admin: True
-keycloak_mysql: False
-keycloak_mysql_connector_version: 8.0.17
-keycloak_mysql_connector_url: "https://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-{{ keycloak_mysql_connector_version }}.zip"
-keycloak_mysql_host: localhost
-keycloak_mysql_user: keycloak
-keycloak_mysql_password: keycloak
-keycloak_mysql_database: keycloak
-keycloak_mysql_port: 3306
-
 ...
